# HyperEternalAgent

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.example.yaml
docs/api/: README.md
docs/architecture/: README.md
docs/design/: agent_system.md  applications.md  orchestration_system.md  persistence_system.md  reflection_system.md
examples/: auto_programming_system.py  paper_writing_system.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/styles/: main.css
frontend/src/components/: MainLayout.vue
frontend/src/components/modals/: NewProjectModal.vue  SettingsModal.vue
frontend/src/components/panels/: CenterPanel.vue  LeftPanel.vue  MessageItem.vue  ProjectItem.vue  RightPanel.vue
frontend/src/components/panels/right-panel/: ConsoleTab.vue  FileTreeNode.vue  FilesTab.vue  LogsTab.vue  TasksTab.vue
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: project.ts  ui.ts
frontend/src/types/: index.ts
src/agents/: base.py  manager.py
src/core/: config.py  main.py  types.py
src/hypereternal/: __init__.py
src/hypereternal/agents/: base.py  manager.py
src/hypereternal/core/: __init__.py  config.py  exceptions.py
src/hypereternal/infrastructure/: llm_client.py
src/hypereternal/orchestration/: flow_engine.py
src/hypereternal/persistence/: checkpoint.py  state_manager.py  storage.py  task_queue.py
src/hypereternal/reflection/: __init__.py  correction.py  llm_evaluation.py  quality.py  self_evolution.py
src/hypereternal/web/: __init__.py  api.py
src/infrastructure/: llm_client.py  logging.py
src/orchestration/: task_router.py
src/persistence/: checkpoint.py  state_manager.py  storage.py  task_queue.py
src/reflection/: correction.py  quality.py
tests/: conftest.py  test_agents.py  test_core_types.py  test_integration.py  test_orchestration.py  test_persistence.py  test_persistence_storage.py  test_reflection.py
